# py_pretty_logger

./: .flake8  .gitignore  DEV_README.md  Dockerfile  MANIFEST.in  README.md  __init__.py  compose-dev.yaml  full_logger.py  makefile  pretty_logging.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml  release.yml  test.yml
dev/: Dockerfile  makefile
src/pretty_logger/: __init__.py  full_logger.py  pretty_logging.py
tests/: test_import.py
